--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
+    <title>My pricing card</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+    <link href='./style.css'>
   </head>
   <body>
     <div id='box'>
